# CDN_Task

./: .gitignore  CMakeLists.txt  README.md
CDN_DNS/src/: CMakeLists.txt  Reader.c  Reader.h  Trie.c  Trie.h  dns.c
Lua_Bonus/: Func.c  script.lua
Wildcard_DNS/src/: 3_task.c  CMakeLists.txt  Patterns.h  Test_Data.h  Trie.c  Trie.h
